--- a/html-css/module-03/css/styles.css
+++ b/html-css/module-03/css/styles.css
@@ -4,17 +4,17 @@
     padding: 0;
     margin: 0;
 }
-.nav {
+.navigation {
     max-width: 960px;
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
-    margin-bottom: 50px;
-    margin-top: 50px;
+    margin-bottom: 77px;
+    margin-top: 77px;
     font-family: 'Playfair Display', sans-serif;
 }
-.nav > a {
-    min-width: 20%;
+.navigation > a {
+    min-width: 15%;
     display: inline-block;
     text-decoration: none;
     color: black;
@@ -26,29 +26,32 @@ a.active {
 .postsection {
     max-width: 960px;
     margin: 0 auto;
+    margin-top: 27px;
 }
 .post {
     display: inline-block;
     max-width: 415px;
     padding-left: 30px;
     padding-right: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 132px;
 }
-.post_category {
+h4 {
     font-size: 14px;
     text-transform: uppercase;
     color: #b4ad9e;
     font-family: 'Ubuntu', sans-serif;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: 31px;
+    margin-bottom: 29px;
+    font-weight: 400;
 }
-.post_title {
+h2 {
     font-size: 30px;
     color: #626262;
     font-family: 'Playfair Display', sans-serif;
-    margin-bottom: 30px;
+    margin-bottom: 34px;
+    font-weight: 400;
 }
-.post_description {
+.post > p {
     font-size: 14px;
     color: #626262;
     font-family: 'Playfair Display', sans-serif;
@@ -61,7 +64,7 @@ a.active {
     margin: 0 auto;
     text-align: center;
     margin-bottom: 30px;
-    margin-top: 30px;
+    margin-top: -78px;
 }
 .all > button {
     width: 164px;
