--- a/html-css/module-03/css/styles.css
+++ b/html-css/module-03/css/styles.css
@@ -34,6 +34,7 @@ a.active {
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 132px;
+    vertical-align: top;
 }
 h4 {
     font-size: 14px;
