--- a/html-css/module-03/css/styles.css
+++ b/html-css/module-03/css/styles.css
@@ -36,6 +36,14 @@ a.active {
     margin-bottom: 132px;
     vertical-align: top;
 }
+
+.post_image > img {
+    width:100%;
+    height:100%;
+}
+.post_image {
+    height: 281px;
+}
 h4 {
     font-size: 14px;
     text-transform: uppercase;
