--- a/html-css/module-03/css/styles.css
+++ b/html-css/module-03/css/styles.css
@@ -9,8 +9,8 @@
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
-    margin-bottom: 77px;
-    margin-top: 77px;
+    padding-bottom: 77px;
+    padding-top: 77px;
     font-family: 'Playfair Display', sans-serif;
 }
 .navigation > a {
@@ -20,21 +20,23 @@
     color: black;
 }
 
-a.active {
+.navigation > a:hover {
     color: deepskyblue;
 }
 .postsection {
     max-width: 960px;
     margin: 0 auto;
     margin-top: 27px;
+    font-size: 0px;
 }
 .post {
     display: inline-block;
-    max-width: 415px;
+    max-width: 420px;
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 132px;
     vertical-align: top;
+
 }
 
 .post_image > img {
@@ -75,7 +77,7 @@ h2 {
     margin-bottom: 30px;
     margin-top: -78px;
 }
-.all > button {
+.btn-load {
     width: 164px;
     height: 60px;
     font-size: 20px;
