--- a/html-css/module-04/css/styles.css
+++ b/html-css/module-04/css/styles.css
@@ -10,14 +10,15 @@
     display: block;
     clear: both;
 }
+
 /* header styles */
 .header {
     max-width: 1110px;
-    padding-top: 77px;
-    padding-bottom: 77px;
+    padding: 77px 0 77px 0;
     margin: 0 auto;
     font-size: 0;
 }
+
 .logo > a {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -26,6 +27,7 @@
     text-transform: uppercase;
     color: #555252;
 }
+
 .logo::first-letter {
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
@@ -33,12 +35,15 @@
     text-transform: uppercase;
     color: #1abc9c;
 }
+
 .logo {
     float: left;
 }
+
 .logo:hover {
     cursor: pointer;
 }
+
 .navigation {
     float: right;
     text-align: center;
@@ -48,8 +53,8 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 35px;
-
 }
+
 .navigation > a {
     text-decoration: none;
     color: #0f0101;
@@ -62,6 +67,7 @@
 .navigation > a:hover {
     color: #1abc9c;
 }
+
 .navigation > a:active {
     color: #1abc9c;
 }
@@ -71,17 +77,18 @@
     margin: 0 auto;
     list-style: none;
     font-size: 0;
-    padding-bottom: 105px;
+    padding-bottom: 75px;
     max-width: 1110px;
 }
+
 .product {
     float: left;
-    padding-right: 30px;
-    padding-bottom: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .product:nth-child(4n) {
-    padding-right: 0;
+    margin-right: 0;
 }
 
 .item-name {
@@ -96,6 +103,7 @@
     font-weight: 900;
     text-transform: uppercase;
 }
+
 .item-price {
     width: 28px;
     float: right;
@@ -107,11 +115,12 @@
     font-size: 18px;
     font-family: 'roboto', sans-serif;
     font-weight: 900;
-
 }
+
 .product:hover {
     cursor: pointer;
 }
+
 .product:hover  .item-name{
     background-color: #1abc9c;
     cursor: pointer;
@@ -125,23 +134,25 @@
 /* news section */
 .news {
     margin: 0 auto;
-    margin-top: 27px;
     font-size: 0;
     max-width: 1110px;
 }
+
 .post {
     display: inline-block;
     max-width: 350px;
     vertical-align: top;
-    padding-right: 30px;
-    padding-bottom: 77px;
+    padding: 0 30px 77px 0;
 }
+
 .post:last-child {
     padding-right: 0px;
 }
+
 .post_image {
     padding-bottom: 14px;
 }
+
 h1 {
     position: relative;
     font-family: 'Roboto', sans-serif;
@@ -152,6 +163,7 @@ h1 {
     text-align: center;
     padding-bottom: 92px;
 }
+
 h1::before {
     content: '';
     position: absolute;
@@ -159,10 +171,11 @@ h1::before {
     border-bottom: 7px solid #1abc9c;
     height: 1em;
     width: 164px;
-    margin-top: 32px;
+    padding-top: 32px;
     left: 50%;
     transform: translate(-50%)
 }
+
 h4 {
     position: relative;
     display: inline-block;
@@ -172,14 +185,16 @@ h4 {
     color: #555252;
     padding-bottom: 43px;
 }
+
 h4::before {
     content: '';
     position: absolute;
     display: inline-block;
     border-bottom: 3px solid #1abc9c;
     width: 136px;
-    margin-top: 61px;
+    padding-top: 61px;
 }
+
 p {
     font-size: 14px;
     font-family: 'Open Sans', sans-serif;
@@ -187,20 +202,19 @@ p {
     color: #555252;
     padding-bottom: 16px;
 }
+
 .more {
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     text-align: center;
     font-size: 16px;
-    padding-left: 43px;
-    padding-right: 43px;
-    padding-top: 19px;
-    padding-bottom: 19px;
+    padding: 19px 43px 19px 43px;
     background-color: #4ec6ab;
     border: none;
     border-radius: 3px;   
 }
+
 .more:hover {
     cursor: pointer;
 }
