--- a/html-css/module-05/css/styles.css
+++ b/html-css/module-05/css/styles.css
@@ -123,7 +123,6 @@ Carousel
 .carousel-control {
   width: 100px;
   height: 100px;
-  background: rgba(26, 188, 156, 0.65);
   text-align: center;
   z-index: 1;
   font-family: "Pe-icon-7-stroke";
@@ -133,12 +132,14 @@ Carousel
 }
 .carousel-control-prev {
   float: left;
+  background: rgba(26, 188, 156, .65);
 }
 .carousel-control-prev::after {
   content: "\e686";
 }
 .carousel-control-next {
   float: right;
+  background: rgba(26, 188, 156);
 }
 .carousel-control-next::after {
   content: "\e684";
