--- a/html-css/module-09/css/styles.css
+++ b/html-css/module-09/css/styles.css
@@ -195,6 +195,9 @@ h2 {
         padding: 0;
         margin: 0;
     }
+    .banner {
+        height: 700px;
+    }
     .banner-title {
         padding-top: 160px;
         font-size: 52px;
